--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "compression": "^1.6.1",
     "cookie-parser": "~1.3.5",
     "dotenv": "^2.0.0",
-    "express": "~4.13.1",
-    "mysql": "^2.13.0",
-    "orm": "^3.2.3"
+    "express": "~4.13.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
